opam-version: "1.2"
maintainer: "abe@sf.ecei.tohoku.ac.jp"
authors: [ "Akinori ABE <abe@sf.ecei.tohoku.ac.jp>" ]
license: "LGPL-2.1 with OCaml linking exception"
homepage: "http://akabe.github.io/slap/"
dev-repo: "https://github.com/akabe/slap.git"
bug-reports: "https://github.com/akabe/slap/issues"
build: [
  [ "jbuilder" "subst" ] {pinned}
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]
depends: [
  "base-bigarray"
  "base-bytes"
  "lacaml" {< "10.0.0"}
  "jbuilder" {build & >= "1.0+beta14"}
  "cppo" {build & >= "1.1.0"}
]
depopts: [
  "ounit" {test}
]
available: [ ocaml-version >= "4.02" ]
